# mingli-mcp

./: .dockerignore  .flake8  .gitignore  AGENTS.md  BAZI_IMPLEMENTATION.md  CHANGELOG.md  CHANGELOG_v1.0.8.md  CLAUDE.md  CLOUDFLARE_EXPLAINED.md  COZE_CONFIG_GUIDE.md  COZE_GUIDE.md  CURSOR_SETUP.md  DEPLOYMENT_CHECK.md  DEPLOYMENT_STATUS.md  DEV_COMMANDS.md  Dockerfile  HIGH_PRIORITY_IMPROVEMENTS.md  HIGH_PRIORITY_IMPROVEMENTS_COMPLETED.md  IMPROVEMENTS_SUMMARY.md  INSTALLATION_IMPROVEMENTS.md  LICENSE  MANIFEST.in  MEDIUM_PRIORITY_IMPROVEMENTS.md  MIGRATION_EVALUATION.md  PALACE_NAME_FIX.md  PYPI_FIXED.md  PYPI_PUBLISH.md  QUICK_START_PYPI.md  README.md  RELEASE_NOTES_v1.0.3.md  RELEASE_NOTES_v1.0.4.md  RELEASE_NOTES_v1.0.9.md  SECURITY_FIXES_SUMMARY.md  UPLOAD_TO_PYPI.md  api_compatibility_analysis.py  apify_main.py  benchmark_iztro_comparison.py  codex_config.toml.example  codex_config_correct.toml  config.py  (+13 more)
.actor/: Dockerfile  README.md  actor.json  input_schema.json  output_schema.json  web_server_openapi.json
.github/workflows/: ci.yml
.hypothesis/constants/: 17906ca7ee454ca2  212a3092cbcdf7b2  27f68bd3de76da94  28daef2e984ee679  30fa83ba47ced729  332ea7ca2b2de9c8  3b26ecaac988173a  3cc1ea01f14588d3  3cd1bdb600fa6ac3  41466d010994037d  4158dc5493abc455  49beacb1e02131cd  4f408facb6f1dde3  4fa75cdef437ec1c  56cf42ab2c028d9d  5b17b6be28a6b159  66804a713fe2eb73  6bfa1c32220968f5  72088302d08653ee  72bd8a6b04395736  74cb2603c82d48a4  7c9c546d66af1cb4  84cda1f062e94977  85fc0bbe0049b437  8ef44aeaf284ba2c  9cb38f64143e39d3  b0142516bf9a5611  b51a04455f784938  b8a53937e60ab2d1  ba05d485f89b0905  d5ddb5d98c09448f  e483183f51c71cbc  e93adb6c89f64683  f0fedb5f6afeddef
.kiro/specs/code-quality-improvements/: design.md  requirements.md  tasks.md
.smithery/: tools.json
cloudflare/: container-worker.mjs
core/: __init__.py  base_system.py  birth_info.py  chart_result.py  exceptions.py
docs/: APIFY_MCP_GUIDE.md  API_EXAMPLES.md  FIX_SUMMARY.md  QUICK_START.md  README.md  RELEASE_NOTES_v1.0.6.md  TROUBLESHOOTING.md  TRUE_SOLAR_TIME.md  USER_GUIDE.md  UVX_SETUP_GUIDE.md
docs/architecture/: ARCHITECTURE.md  CLEANUP_SUMMARY.md  PROJECT_SUMMARY.md
docs/deployment/: CLOUDFLARE_CONTAINERS.md  CLOUDFLARE_DEPLOY.md  DEPLOYMENT.md  DEPLOYMENT_SUMMARY.md
docs/development/: .gitkeep  CHECK_RESULTS.md  CLOUDFLARE_TUNNEL_SETUP.md  CODEX_CONFIG.md  CODEX_TROUBLESHOOTING.md  DIAGNOSIS.md  FINAL_STEPS.md  QUICK_FIX_CODEX.md  SUCCESS_REPORT.md  UPGRADE_GUIDE.md
docs/guides/: DOCUMENTATION_GUIDE.md  MCP_CLIENT_CONFIG.md  QUICKSTART.md
docs/research/: APIFY_STORE_COMPETITOR_RESEARCH.md
examples/: demo_improvements.py
examples/config/: .env.example  uvx_mcp_config.json  uvx_mcp_config_correct.json
mcp/: __init__.py  protocol.py  server.py
mcp/tools/: __init__.py  bazi_handlers.py  definitions.py  ziwei_handlers.py
mingli_mcp/: __init__.py  __main__.py  cli.py  config.py
mingli_mcp/core/: __init__.py  base_system.py  birth_info.py
mingli_mcp/mcp_server/: __init__.py  protocol.py  resources.py  server.py
mingli_mcp/mcp_server/tools/: __init__.py  bazi_handlers.py  definitions.py  ziwei_handlers.py
mingli_mcp/prompts/: ziwei_basic_reading.md
mingli_mcp/systems/: __init__.py
mingli_mcp/systems/bazi/: __init__.py  bazi_system.py  formatter.py
mingli_mcp/systems/ziwei/: formatter.py  ziwei_system.py
mingli_mcp/transports/: base_transport.py  http_transport.py  stdio_transport.py
mingli_mcp/utils/: __init__.py  formatters.py  metrics.py  rate_limiter.py  validators.py
prompts/: bazi_fortune_analysis.md  fortune_consultation_guide.md
scripts/: check_ready_to_publish.sh
scripts/tests/: test_http.sh  test_mcp_handshake.sh
systems/: __init__.py
systems/astrology/: __init__.py
systems/bazi/: __init__.py  bazi_system.py  formatter.py
systems/ziwei/: __init__.py  formatter.py  ziwei_system.py
tests/: conftest.py  test_actor_metadata.py  test_apify_http.py  test_bazi.py  test_birth_info_properties.py  test_boundary.py  test_boundary_cases.py  test_formatters.py  test_http_transport.py  test_mcp_server.py  test_performance.py  test_protocol.py  test_solar_time.py  test_solar_time_properties.py  test_stdio_transport.py  test_validators.py  test_validators_properties.py  test_ziwei.py
tests/test_tools/: __init__.py  test_bazi_handlers.py  test_ziwei_handlers.py
transports/: __init__.py  base_transport.py  http_transport.py  stdio_transport.py
utils/: __init__.py  formatters.py  metrics.py  performance.py  rate_limiter.py  solar_time.py  validators.py
